src/objects/ProductRatePlan__c.object
<CustomObject>
    <description>The Rate Plan associated with a Product.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>25535</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DiscountPercentage__c</fullName>
        <label>Discount Percentage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EntitlementSetId__c</fullName>
        <label>Entitlement Set Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventStartDateTime__c</fullName>
        <label>Event Start Date Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OfferType__c</fullName>
        <label>Offer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FreeTrial</fullName>
                </value>
                <value>
                    <fullName>HardOffer</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PPVType__c</fullName>
        <label>PPV Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bandle</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PackageName__c</fullName>
        <label>Package Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriceSummary__c</fullName>
        <label>Price Summary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Product_Rate_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>DAZN Product Rate Plan</label>
    <nameField>
        <label>Rate Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DAZN Product Rate Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>